made changes to the about us page

--- a/client/about.html
+++ b/client/about.html
@@ -16,25 +16,25 @@
                         <li><a href="./signup.html">REGISTER</a>
                         <li><a href="./signup.html">LOG IN</a>
     </nav>
-    <div class>
-        <div class="white-bg no-padding">
-            <div class="container">
+        <div class="about-section">
             <div class="page-content">
             <h1>About Us</h1>
-        <p>360 automart is one of the World’s leading digital automotive marketplace</p>
+            
+                <div class="about">
+        <p>
+            360 automart is one of the World’s leading digital automotive marketplace
+        </p>
+        <a href="#"> Read More </a>
     </div>
-    <div class="clearfix"></div>
-    <div class="page-content">
-        <hr>
-        <div class="coll">
+    </div>
             <h2>Our Primary Activity</h2>
-            <p>"is to help vehicle retailers and parts to compete effectively in the
+            <p>Is to help vehicle retailers and parts to compete effectively in the
                 marketplace in order to sell more vehicles,faster and cheaper. The
                 marketplace brings together engaged consumer audience, with the pool of
-                vehicle sellers, listing various cars each day.</p>
+                vehicle sellers, listing various cars each day.
+            </p>
         </div>
-             </div>
-</div>
-    </div>
         </div>
+
 </body>
+</html>
