made changes to this page

--- a/client/about.html
+++ b/client/about.html
@@ -28,7 +28,8 @@
     </div>
     </div>
             <h2>Our Primary Activity</h2>
-            <p>Is to help vehicle retailers and parts to compete effectively in the
+            <p>
+                Is to help vehicle retailers and parts to compete effectively in the
                 marketplace in order to sell more vehicles,faster and cheaper. The
                 marketplace brings together engaged consumer audience, with the pool of
                 vehicle sellers, listing various cars each day.
