--- a/about.html
+++ b/about.html
@@ -16,25 +16,21 @@
                         <li><a href="./signup.html">REGISTER</a>
                         <li><a href="./signup.html">LOG IN</a>
     </nav>
-    <div class>
-        <div class="white-bg no-padding">
-            <div class="container">
+   <header>
+        <h1>ABOUT US</h1>
+    </header>
+    <div class="about-section">
             <div class="page-content">
-            <h1>About Us</h1>
-        <p>360 automart is one of the World’s leading digital automotive marketplace</p>
-    </div>
-    <div class="clearfix"></div>
-    <div class="page-content">
-        <hr>
-        <div class="coll">
-            <h2>Our Primary Activity</h2>
-            <p>"is to help vehicle retailers and parts to compete effectively in the
-                marketplace in order to sell more vehicles,faster and cheaper. The
-                marketplace brings together engaged consumer audience, with the pool of
-                vehicle sellers, listing various cars each day.</p>
+                <h2>Our Primary Activity</h2>
+        <p>
+            360 automart is one of the World’s leading digital automotive marketplace.
+            Is to help vehicle retailers and parts to compete effectively in the
+            marketplace in order to sell more vehicles,faster and cheaper. The
+            marketplace brings together engaged consumer audience, with the pool of
+            vehicle sellers, listing various cars each day.
+        </p>
         </div>
-             </div>
-</div>
-    </div>
         </div>
+
 </body>
+</html>
