made changes to inventory

--- a/client/about.html
+++ b/client/about.html
@@ -16,24 +16,19 @@
                         <li><a href="./signup.html">REGISTER</a>
                         <li><a href="./signup.html">LOG IN</a>
     </nav>
-        <div class="about-section">
+   <header>
+        <h1>ABOUT US</h1>
+    </header>
+    <div class="about-section">
             <div class="page-content">
-            <h1>About Us</h1>
-            
-                <div class="about">
+                <h2>Our Primary Activity</h2>
         <p>
-            360 automart is one of the World’s leading digital automotive marketplace
+            360 automart is one of the World’s leading digital automotive marketplace.
+            Is to help vehicle retailers and parts to compete effectively in the
+            marketplace in order to sell more vehicles,faster and cheaper. The
+            marketplace brings together engaged consumer audience, with the pool of
+            vehicle sellers, listing various cars each day.
         </p>
-        <a href="#"> Read More </a>
-    </div>
-    </div>
-            <h2>Our Primary Activity</h2>
-            <p>
-                Is to help vehicle retailers and parts to compete effectively in the
-                marketplace in order to sell more vehicles,faster and cheaper. The
-                marketplace brings together engaged consumer audience, with the pool of
-                vehicle sellers, listing various cars each day.
-            </p>
         </div>
         </div>
 
